--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
-    remote = local_remote
-['remote "local_remote"']
-    url = C:/Users/smrc/Documents/GitHub/Car-Insurance-Data-Analysis-2
+    remote = localstorage
+['remote "localstorage"']
+    url = D:/KIFYA AIM/WEEK 3/Project/data
